<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="40dp"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">


            <TextView
                android:id="@+id/classText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="20dp"
                android:editable="true"
                android:text="Class 2:"
                android:textSize="20sp"
                android:paddingBottom="10dp" />

            <EditText
                android:id="@+id/classNameInput1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Enter Class Name"
                android:textSize="20sp"
                android:layout_alignBottom="@+id/classText1"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/classText1"

                />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:paddingLeft = "0dp"
                android:paddingRight="0dp"
                android:layout_height="wrap_content"
                android:text= "@string/smallButtonText"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignBottom="@id/classText1"
                android:onClick="courseCatalog"
                />



            <!--CLASS LEVEL SELECTION STARTS HERE-->

            <TextView
                android:id="@+id/selectLevelText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/classText1"
                android:layout_centerHorizontal="true"
                android:text="Select Class Level"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/selectLevelLayout1"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/selectLevelText1"
                >

                <Button
                    android:id="@+id/collegePrepButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "@string/cpText"
                    android:onClick="selectLevel" />

                <Button
                    android:id="@+id/honorsButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "@string/honorsText"
                    android:layout_alignBottom="@id/classText1"
                    android:onClick="selectLevel" />
                <Button
                    android:id="@+id/APButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "@string/apText"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignBottom="@id/classText1"
                    android:onClick="selectLevel" />


            </LinearLayout>

            <!-- CLASS LEVEL SELECTION ENDS HERE-->

            <TextView
                android:id="@+id/selectGradeText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/selectLevelLayout1"
                android:layout_centerHorizontal="true"
                android:text="@string/selectGradeText"
                android:layout_marginTop="15dp"
                android:textSize="25sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/mainSeekBar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/selectGradeText1"
                android:layout_gravity="center_horizontal"
                android:max="11"
                android:layout_marginBottom="15dp" />

            <TextView
                android:id="@+id/selectCreditsText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mainSeekBar1"
                android:layout_centerHorizontal="true"
                android:text="@string/credits"
                android:layout_marginTop="15dp"
                android:textSize="25sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/creditsSeekBar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/selectCreditsText1"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp" />



        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
