<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="40dp"

    >

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">


            <TextView
                android:id="@+id/classText0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="20dp"
                android:editable="true"
                android:paddingBottom="10dp"
                android:text="Class 1:"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/classNameInput0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/classText0"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/classText0"
                android:hint="Enter Class Name"
                android:textSize="20sp"

                />

            <Button
                android:id="@+id/courseCatalogButton0"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/classText0"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:onClick="sendIntent"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:text="@string/smallButtonText" />


            <!--CLASS LEVEL SELECTION STARTS HERE-->

            <TextView
                android:id="@+id/selectLevelText0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/classText0"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:text="Select Class Level"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/selectLevelLayout0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/selectLevelText0"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/collegePrepButton0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/cpText" />

                <Button
                    android:id="@+id/honorsButton0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/classText0"
                    android:layout_weight="2"
                    android:text="@string/honorsText" />

                <Button
                    android:id="@+id/APButton0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/classText0"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_weight="2"
                    android:text="@string/apText" />


            </LinearLayout>

            <!-- CLASS LEVEL SELECTION ENDS HERE-->

            <TextView
                android:id="@+id/selectCreditsText0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/selectLevelLayout0"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/credits"
                android:textSize="25sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/creditsSeekBar0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/selectCreditsText0"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
